# hjq

./: .gitignore  flake.nix  hjq.cabal
app/: Main.hs
lib/: Json.hs  JsonParse.hs  JsonStructure.hs
src/: Main.hs
