cabal-version:   3.0
name:            hjq
version:         0.1.0.0
license:         MIT
author:          Ivo Zitnik
maintainer:      zitnik.ivo@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable hjq
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
