cabal-version:   3.0
name:            hjq
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Ivo Zitnik
maintainer:      zitnik.ivo@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Json
    other-modules:    JsonParse JsonStructure
    build-depends:    base
    hs-source-dirs:   lib
    default-language: Haskell2010

executable hjq
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, hjq
    hs-source-dirs:   app
    default-language: Haskell2010

